Mudanças realizadas: - Template agora renderiza o form que vem pelo contexto da view - Removido todo o formulário hard-coded - No base.html, coloquei as URLs para o cadastro dos outros objetos

--- a/sciurd/core/templates/base.html
+++ b/sciurd/core/templates/base.html
@@ -30,11 +30,11 @@
             <li class="divider"></li>
             <li><a href="{% url 'esposa-add' %}">Esposa</a></li>
             <li class="divider"></li>
-            <li><a href="#">Filho</a></li>
+            <li><a href="{% url 'filho-add' %}">Filho</a></li>
             <li class="divider"></li>
-            <li><a href="#">Igreja</a></li>
+            <li><a href="{% url 'igreja-add' %}">Igreja</a></li>
             <li class="divider"></li>
-            <li><a href="#">Carro</a></li>
+            <li><a href="{% url 'carro-add' %}">Carro</a></li>
           </ul>
         </li>
         <li><a href="#">Listar</a></li>
