--- a/sciurd/core/templates/esposa.html
+++ b/sciurd/core/templates/esposa.html
@@ -3,125 +3,19 @@
 {% block content %}
  
 <div id="main" class="container-fluid">
- <h3 class="page-header">Cadastra Esposa</h3>
- <form action="index.html">
-  <div class="row">
- <div class="form-group col-md-6">
-   <label for="campo1">Nome</label>
-   <input type="text" class="form-control" id="campo1">
- </div>
- </div>
-  
- <div class="form-group col-md-4">
-   <label for="campo4">Casamento/ data:</label>
-   <input type="text" class="form-control" id="campo4">
- </div>
- 
- <div class="form-group col-md-4">
-   <label for="campo5">RG nº</label>
-   <input type="text" class="form-control" id="campo5">
- </div>
- 
- <div class="form-group col-md-4">
-   <label for="campo6">Data de exp</label>
-   <input type="text" class="form-control" id="campo6">
- </div>
-  
- <div class="form-group col-md-4">
-   <label for="campo7">CPF.:</label>
-   <input type="text" class="form-control" id="campo7">
- </div>
- 
- <div class="form-group col-md-3">
-   <label for="campo8">CNH:</label>
-   <input type="text" class="form-control" id="campo8">
- </div> 
-
-<div class="form-group col-md-3">
-   <label for="campo9">Titulo:</label>
-   <input type="text" class="form-control" id="campo9">
- </div>
- 
- <div class="form-group col-md-3">
-   <label for="campo10">Zona:</label>
-   <input type="text" class="form-control" id="campo10">
- </div>
-
-<div class="form-group col-md-3">
-   <label for="campo11">Seção</label>
-   <input type="text" class="form-control" id="campo11">
- </div>
- 
- <div class="form-group col-md-6">
-   <label for="campo12">Naturalidade/ UF:</label>
-   <input type="text" class="form-control" id="campo12">
- </div>
-
-<div class="form-group col-md-6">
-   <label for="campo13">Nacionalidade:</label>
-   <input type="text" class="form-control" id="campo13">
- </div>
- 
- <div class="form-group col-md-6">
-   <label for="campo14">Passaporte:</label>
-   <input type="text" class="form-control" id="campo14">
- </div>
-
-<div class="form-group col-md-6">
-   <label for="campo15">Data de Expiração:</label>
-   <input type="text" class="form-control" id="campo15">
- </div>
- 
- <div class="form-group col-md-6">
-   <label for="campo16">Indioma:</label>
-   <input type="text" class="form-control" id="campo16">
- </div>
-
-<div class="form-group col-md-6">
-   <label for="campo17">Profissão:</label>
-   <input type="text" class="form-control" id="campo17">
- </div>
-
-
-<div class="checkbox">
- <label>Grau de Instrução</label> 
- <label>
-   <input type= "checkbox" >1º</label>
-<label>
-   <input type= "checkbox" >2º</label>
-<label>
-   <input type= "checkbox" >Superior / Curso ________________</label>   
-</div>
-
-<div class="form-group col-md-3">
-   <label for="campo18">E-mail</label>
-   <input type="text" class="form-control" id="campo18">
-</div>
-
-<div class="form-group col-md-3">
-   <label for="campo19">Tel</label>
-   <input type="text" class="form-control" id="campo19">
- </div>
- 
- <div class="form-group col-md-3">
-   <label for="campo20">WhastApp</label>
-   <input type="text" class="form-control" id="campo20">
- </div>
-
-  <!-- area de campos do form -->
- <hr />
-  <div id="actions" class="row">
-    <div class="col-md-12">
-      <button type="submit" class="btn btn-primary">Salvar</button>
-      <a href="index.html" class="btn btn-default">Cancelar</a>
-    </div>
-  </div>
+ <h3 class="page-header">Cadastra Pastor</h3>
+<form method="POST" action="">
+	{% csrf_token %}
+	<div id="actions" class="row">
+	{{ form.as_p }}
+	<div class="col-md-12">
+		<button type="submit" class="btn btn-primary">Salvar</button>
+		<a href="index.html" class="btn btn-default">Cancelar</a>
+	</div>
+	</div>
 </form>
+</div>
 
    
 {% endblock content %}
 
-
-
-</div>
-</html>
